--- a/assets/css/globals/common.css
+++ b/assets/css/globals/common.css
@@ -464,7 +464,7 @@ body {
 }
 
 .markdown-body table tr {
-  background-color: #fff;
+  background-color: #f5f5f5;
   border-top: 1px solid #ccc;
 }
 
