--- a/assets/css/components/boxed-group.css
+++ b/assets/css/components/boxed-group.css
@@ -88,7 +88,7 @@
 }
 .boxed-group-inner {
   padding: 1px 10px;
-  background: #fff;
+  background: #f5f5f5;
   border: 1px solid #d8d8d8;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
