--- a/assets/css/posts/index.css
+++ b/assets/css/posts/index.css
@@ -50,7 +50,7 @@
   margin-left: -4px;
   background: #bbb;
   border-radius: 50%;
-  border: 1px solid #fff;
+  border: 1px solid #f5f5f5;
   transition-duration: 0.2s;
   transition-timing-function: ease-in-out;
   transition-delay: 0s;
